--- a/swt_api_spec/paths/farm_coodinates/farm_coordinate.yaml
+++ b/swt_api_spec/paths/farm_coodinates/farm_coordinate.yaml
@@ -1,6 +1,6 @@
 post:
   tags:
-    - Farm
+    - Farm_coodinates
   summary: Update farm coordinate
   operationId: updateFarmCoordinate
   security:
