--- a/swt_api_spec/paths/requirement/requirement.yaml
+++ b/swt_api_spec/paths/requirement/requirement.yaml
@@ -1,8 +1,8 @@
 post:
   tags:
     - Requirement
-  summary: Create a requirement from Rainforest Alliance certification requirement
-  description: Create a requirement from Rainforest Alliance certification requirement dedicated for the offer plan.
+  summary: Create a requirement
+  description: To create a requirement from Rainforest Alliance certification requirement dedicated for the offer plan.
   operationId: createRequirement
   security:
     - BearerAuth: []
