--- a/swt_api_spec/components/schemas/project_audit.yaml
+++ b/swt_api_spec/components/schemas/project_audit.yaml
@@ -10,9 +10,23 @@ properties:
     type: string
     format: cuid
     readOnly: true
-    description: "the project from which the audit is donne"
-  useri_id:
+    description: "The project from which the audit is donne"
+  user_id:
     type: string
     format: cuid
     readOnly: true
-    description: "the employee conducting of the project"
+    description: "The employee conducting of the project"
+  type_of_project:
+    type: string
+    description: The type of the project the user where conducting
+    example: "internal inspection"
+  created_at:
+    type: string
+    format: date-time
+    example: "2020-01-01T00:00:00Z"
+    description: "the date and time when the project_audit was created"
+  updated_at:
+    type: string
+    format: date-time
+    example: "2020-01-01T00:00:00Z"
+    description: "the date and time when the project_audit was updated"
