--- a/swt_api_spec/paths/user/user_{id}.yaml
+++ b/swt_api_spec/paths/user/user_{id}.yaml
@@ -13,7 +13,7 @@ get:
       required: true
       schema:
         type: integer
-        example: 1
+        example: djfdjsbhvbhsv62656FDOF(*)
 
   responses:
     "200":
@@ -30,11 +30,12 @@ put:
   tags:
     - User
   summary: Update user by id
+  description: modify some information concerning the user.
   operationId: updateUserById
   parameters:
     - name: id
       in: path
-      description: user id#+
+      description: The ID of the user to be updated.
       required: true
       schema:
         type: string
