--- a/swt_api_spec/components/schemas/price_plan.yaml
+++ b/swt_api_spec/components/schemas/price_plan.yaml
@@ -8,21 +8,47 @@ properties:
     description: "The unique Id of the price plan."
   active:
     type: boolean
-    description: "is the plan active"
-  unit_amount:
+    description: "To indicate if the price plan is active or not"
+  price:
     type: string
     example: "$2000"
-    description: "unit amount of the price plan"
+    description: " To indicate the amount of the price plan"
   currency:
     type: string
     format: currency
     example: "USD"
-    description: "currency of the price plan"
+    description: "To indicate the currency of the price plan"
   name:
     type: string
-    description: the name of the corresponding price plan
+    description: To indicate the name of the corresponding price plan
     example: "Gold | Silver | Bronze"
-  image_url:
+  duration:
     type: string
-    description: the image corresponding to the corresponding price plan
-    example: "https://senima.com/wp-content/uploads/2022/01/gold.png"
+    example: "3 months"
+    description: "To indicate the duration of the corresponding price plan"
+  benefits:
+    type: array
+    description: "To indicate the benefits of the corresponding price plan"
+    items:
+      type: string
+      description: "To indicate the benefits of the corresponding price plan"
+  renewal_options:
+    type: array
+    description: "To indicate the renewal options of the corresponding price plan"
+    items:
+      type: string
+      description: "To indicate the renewal options of the corresponding price plan"
+  cancellation_policy:
+    type: string
+    description: "To indicate the cancellation policy of the corresponding price plan"
+    example: "No refunds"
+  created_at:
+    type: string
+    format: date-time
+    example: "2020-01-01T00:00:00Z"
+    description: "the date and time when the price plan was created"
+  updated_at:
+    type: string
+    format: date-time
+    example: "2020-01-01T00:00:00Z"
+    description: "the date and time when the price plan was updated"
